--- a/HTML5_Video.html
+++ b/HTML5_Video.html
@@ -7,6 +7,12 @@
 		<video width="800" height="600" controls>
 			<source src="" type="video/mp4">
 			Your browser does not support the HTML5 video tag.
+		</video>
+		<P>想不到橡皮筋的妙用這樣多，學起來受用終身！ [防滑曬衣架,洗髮精節約裝置,手機固定在汽車冷氣口(手機架),砧板防滑,湯尺防滑,讓緊閉的蓋子容易開啟]</P>
+		<video width="800" height="600" controls>
+			<source src="https://github.com/jash-git/youtube_Learn_moive05/blob/master/%E6%83%B3%E4%B8%8D%E5%88%B0%E6%A9%A1%E7%9A%AE%E7%AD%8B%E7%9A%84%E5%A6%99%E7%94%A8%E9%80%99%E6%A8%A3%E5%A4%9A%EF%BC%8C%E5%AD%B8%E8%B5%B7%E4%BE%86%E5%8F%97%E7%94%A8%E7%B5%82%E8%BA%AB%EF%BC%81.mp4?raw=true" type="video/mp4">
+			Your browser does not support the HTML5 video tag.
 		</video>		
+		
 	</BODY>
 </html>
