--- a/HTML5_Video.html
+++ b/HTML5_Video.html
@@ -13,6 +13,10 @@
 			<source src="https://github.com/jash-git/youtube_Learn_moive05/blob/master/%E6%83%B3%E4%B8%8D%E5%88%B0%E6%A9%A1%E7%9A%AE%E7%AD%8B%E7%9A%84%E5%A6%99%E7%94%A8%E9%80%99%E6%A8%A3%E5%A4%9A%EF%BC%8C%E5%AD%B8%E8%B5%B7%E4%BE%86%E5%8F%97%E7%94%A8%E7%B5%82%E8%BA%AB%EF%BC%81.mp4?raw=true" type="video/mp4">
 			Your browser does not support the HTML5 video tag.
 		</video>		
-		
+		<P>12 Zip Tie Life Hacks (束帶/束線帶) [裝訂書/裝訂文件,打火機安全收納,補救拉鍊扣環,枕頭曬衣架,簡易鑰匙圈,電風扇外框固定,自製門簾扣環,湯匙防滑,吹泡泡棒,遛狗繩,永不鬆脫鞋帶]</P>
+		<video width="800" height="600" controls>
+			<source src="https://github.com/jash-git/youtube_Learn_moive05/blob/master/12%20Zip%20Tie%20Life%20Hacks.mp4?raw=true" type="video/mp4">
+			Your browser does not support the HTML5 video tag.
+		</video>		
 	</BODY>
 </html>
