--- a/HTML5_Video.html
+++ b/HTML5_Video.html
@@ -33,6 +33,10 @@
 			<source src="https://github.com/jash-git/youtube_Learn_moive05/blob/master/5%20Awesome%20Life%20Hacks%20for%20Plastic%20Bottle%20(1).mp4?raw=true" type="video/mp4">
 			Your browser does not support the HTML5 video tag.
 		</video>		
-		
+		<P>2 Awesome ideas[自製哄手機吹乾器]</P>
+		<video width="800" height="600" controls>
+			<source src="https://github.com/jash-git/youtube_Learn_moive05/blob/master/2%20Awesome%20ideas.mp4?raw=true" type="video/mp4">
+			Your browser does not support the HTML5 video tag.
+		</video>		
 	</BODY>
 </html>
