--- a/HTML5_Video.html
+++ b/HTML5_Video.html
@@ -37,6 +37,12 @@
 		<video width="800" height="600" controls>
 			<source src="https://github.com/jash-git/youtube_Learn_moive05/blob/master/2%20Awesome%20ideas.mp4?raw=true" type="video/mp4">
 			Your browser does not support the HTML5 video tag.
+		</video>
+		<P>3 Awesome School Life Hacks[自製畫線器]</P>
+		<video width="800" height="600" controls>
+			<source src="https://github.com/jash-git/youtube_Learn_moive05/blob/master/3%20Awesome%20School%20Life%20Hacks.mp4?raw=true" type="video/mp4">
+			Your browser does not support the HTML5 video tag.
 		</video>		
+		
 	</BODY>
 </html>
